--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "start": "nodemon index.js --watch",
     "test": "jest --forceExit"
   },
-  "author": "",
+  "author": "Aure Yahouedeou <admofficiel@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
     "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
-  }
+  },
+  "repository": "https://github.com/AllanBUSI/piscine-js.git"
 }
