--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon index.js --watch",
     "test": "jest --forceExit"
   },
-  "author": "Aure Yahouedeou <admofficiel@gmail.com>",
+  "author": "Aurel Yahouedeou <admofficiel@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
@@ -17,5 +17,5 @@
     "jest": "^29.7.0",
     "supertest": "^6.3.3"
   },
-  "repository": "https://github.com/AllanBUSI/piscine-js.git"
+  "repository": "https://github.com/imaurelsan/piscine-js.git"
 }
